module_aks_deploy/service.yaml
#service.yaml test
apiVersion: v1
kind: Service
metadata:
  name: contoso-website
spec:
  type: ClusterIP
  selector:
    app: contoso-website
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: http
