module_aks_deploy/ingress.yaml
#ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: contoso-website
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: contoso.bdd3b3667a544c1aa0fc.westeurope.aksapp.io
          http:
                paths:
                    - backend:
                          serviceName: contoso-website
                          servicePort: http
                      path: /
